kanban-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanban-ui
spec:
  selector:
    app: kanban-ui
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
