ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kanban-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kanban.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kanban-ui
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: kanban-app
            port:
              number: 8080
      - path: /adminer
        pathType: Prefix
        backend:
          service:
            name: adminer
            port:
              number: 8080
